--- a/client/index.html
+++ b/client/index.html
@@ -48,7 +48,7 @@
 		        <div class= "box2" style="background-color: {{bgColor}}">
 		            <input type="text" placeholder="Title" size="20" ng-model="title1" class="title" style="background-color: {{bgColor}}"></input>
 					   	<textarea placeholder="Description" ng-model="desc1" class="desc" rows="2" style="background-color: {{bgColor}}"></textarea>
-						<button ng-click="addToList()" class="done" style="background-color: {{bgColor}}">DONE</button>
+						<button ng-click="editDone()" class="done" style="background-color: {{bgColor}}">DONE</button>
 				</div>
 			</div>
 		</div>
